# omynix-waybar-manager

./: .gitignore  Cargo.toml  README.md  flake.nix  waybar_niri_template_example.jsonc
src/: cache.rs  config.rs  main.rs  monitor.rs  templates.rs  window_manager.rs
