[package]
name = "omynix-waybar-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# TOML Management
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handlings
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "color"] }
colored = "2.1"

# File system
dirs = "5.0"

# Regex for parsing
regex = "1.10"

chrono = "0.4.42"
json_comments = "0.2"
notify-rust = "4.11"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

